// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radio-button/presenters/RadioButtonPresenter renders with all props 1`] = `
.emotion-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  display: inline-block;
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  padding: 0;
  z-index: 1;
}

.emotion-0:checked + span {
  background-color: #7993B0;
  box-shadow: inset 0 0 0 3px #ffffff;
}

.emotion-1 {
  opacity: 0.5;
  position: relative;
  color: transparent;
  border: solid 1px rgba(190,200,210,0.5);
  background-color: transparent;
  text-align: center;
  font-size: 25px;
  line-height: 14px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
}

<div
  className="emotion-2"
>
  <input
    checked={true}
    className="emotion-0"
    defaultChecked={false}
    disabled={true}
    label="HELLO"
    name="RadioButton"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    required="required helper text"
    type="radio"
    value="value"
  />
  <span
    className="emotion-1"
  />
</div>
`;

exports[`radio-button/presenters/RadioButtonPresenter renders without props 1`] = `
.emotion-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  display: inline-block;
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  padding: 0;
  z-index: 1;
}

.emotion-0:checked + span {
  background-color: #7993B0;
  box-shadow: inset 0 0 0 3px #ffffff;
}

.emotion-1 {
  opacity: 1.0;
  position: relative;
  color: transparent;
  border: solid 1px rgba(190,200,210,0.5);
  background-color: transparent;
  text-align: center;
  font-size: 25px;
  line-height: 14px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
}

<div
  className="emotion-2"
>
  <input
    className="emotion-0"
    defaultChecked={false}
    disabled={false}
    name="radiobutton"
    type="radio"
    value="value"
  />
  <span
    className="emotion-1"
  />
</div>
`;
